# guile-gl

./: .gitignore  AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  README  README.swig  aclocal.m4  build-environ.in  config.h  config.h.in  config.status  configure  configure.ac  dev-environ  libtool
autom4te.cache/: output.0  output.1  output.2  output.3  output.4  output.5  output.6  requests  traces.0  traces.1  traces.2  traces.3  traces.4  traces.5  traces.6
doc/: a.out  gears.scm  test.c  test2  test2.scm
lightning/: asm.h  core.h  fp.h  funcs.h
lightning/i386/: asm.h  core.h  fp.h  funcs.h
lightning/ppc/: asm.h  core.h  fp.h  funcs.h
lightning/sparc/: asm.h  core.h  fp.h  funcs.h
src/: Makefile  Makefile.am  Makefile.in  gl.i  gl_wrap.c  glu.i  glu_wrap.c  glut.i  glut_wrap.c  help.i  libguile-gl.la
src/.deps/: libguile_gl_la-gl_wrap.Plo  libguile_opengl_gl_la-gl_wrap.Plo  libguile_opengl_glu_la-glu_wrap.Plo  libguile_opengl_glut_la-glut_wrap.Plo
src/opengl/: gl.go  gl.scm  glu.go  glu.scm  glut.go  glut.scm
tests/: test2.scm
unit-tests/: Makefile.am  gears.scm  test
